00.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fathom
  namespace: fathom
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: fathom
  template:
    metadata:
      labels:
        app: fathom
    spec:
      containers:
      - name: fathom
        image: usefathom/fathom:latest
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
        readinessProbe:
          httpGet:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 7
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 60"]
