01.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fathom-svc
  namespace: fathom
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: fathom
